<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Profilesque</string>
    <string name="action_settings">Settings</string>
    <string name="notmember">Not a member, yet?</string>
    <string name="signup">Sign Up!</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="edittext1">enter username</string>
    <string name="edittext2">enter password</string>
    <string name="button1">Submit</string>
    <string name="dialog_loginfail">Your credentials are incorrect!  Please try again!</string>
    <string name="dialog_ok">OK</string>
    <string name="profile_placeholder">Profile Placeholder</string>
    <string name="register_placeholder">Register Placeholder</string>
    <string name="reg_email">Enter a valid email..</string>
    <string name="reg_password">Create a password..</string>
    <string name="reg_firstname">Enter your first name..</string>
    <string name="reg_lastname">Enter your last name..</string>
    <string name="profile_email">Email:</string>
    <string name="profile_firstn">First Name:</string>
    <string name="profile_lastn">Last Name:</string>
    <string name="profile_about">About:</string>

</resources>
